many style updates

--- a/frontend/src/Components/Sections/CompaniesComponent/styles.css
+++ b/frontend/src/Components/Sections/CompaniesComponent/styles.css
@@ -1,8 +1,9 @@
 .companies-intro {
   text-align: center;
   padding-top: 9.8rem;
+  padding-bottom: 2.4rem;
   font-family: "Montserrat";
-  font-size: 20px;
+  font-size: 1.6rem;
   color: rgba(0, 0, 0, 0.89);
 }
 
