--- a/frontend/src/Components/Sections/CompaniesComponent/styles.css
+++ b/frontend/src/Components/Sections/CompaniesComponent/styles.css
@@ -1,10 +1,11 @@
 .companies-intro {
   text-align: center;
-  padding-top: 9.8rem;
-  padding-bottom: 2.4rem;
+  margin-top: 9.8rem;
+  margin-bottom: 2.4rem;
   font-family: "Montserrat";
   font-size: 1.6rem;
   color: rgba(0, 0, 0, 0.89);
+  font-style: italic;
 }
 
 .img--wrapper img {
@@ -128,6 +129,13 @@
 
   .img--wrapper.img3 img {
     max-width: 180px;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .companies-intro {
+    padding-top: 2.4rem;
+    font-size: 28px;
   }
 }
 
