--- a/frontend/src/Components/Sections/ProjectsComponent/ProjectModalComponent/styles.css
+++ b/frontend/src/Components/Sections/ProjectsComponent/ProjectModalComponent/styles.css
@@ -12,7 +12,7 @@
 }
 
 .modal-content {
-  aspect-ratio: 16/9;
+  /* aspect-ratio: 16/9; */
   background-color: white;
   width: 100vh;
   padding: 20px;
@@ -209,18 +209,22 @@
   margin-top: 0;
 }
 
-@media screen and (max-width: 780px) {
-  /* CSS FOR ILDIDEV MODAL */
+@media screen and (max-width: 820px) {
+  \ .modal-content {
+    width: 92vw;
+  }
+}
 
+@media screen and (max-width: 780px) {
   .last-project .btns--wrapper__inner button {
     margin-top: 24px;
   }
 
   .modal-content {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0.5fr 1fr;
     width: 50vh;
-    height: 105vw;
+    height: fit-content;
     place-items: start;
   }
 
@@ -240,9 +244,8 @@
 @media screen and (max-width: 558px) {
   .modal-content {
     width: 44vh;
-    height: 137vw;
-    grid-template-rows: 0.7fr 1fr;
-    margin-top: 60px;
+    /* height: 137vw; */
+    /* margin-top: 60px; */
   }
 
   .img-wrapper {
@@ -292,7 +295,13 @@
   }
 }
 
-@media screen and (min-width: 785px) and (max-height: 800px) {
+@media screen and (max-width: 390px) {
+  .modal-content {
+    margin-top: 85px;
+    height: 150vw;
+  }
+}
+/* @media screen and (min-width: 785px) and (max-height: 800px) {
   .modal-content {
     width: 600px !important;
   }
@@ -308,9 +317,9 @@
   .modal-content {
     margin-top: 80px;
   }
-}
+} */
 
-@media screen and (min-width: 1024px) and (max-height: 800px) {
+/* @media screen and (min-width: 1024px) and (max-height: 800px) {
   .modal-content {
     width: 811px !important;
   }
@@ -320,9 +329,9 @@
   .modal-content {
     margin-top: 80px;
   }
-}
+} */
 
-@media screen and (min-width: 540px) and (max-height: 720px) {
+/* @media screen and (min-width: 540px) and (max-height: 720px) {
   .modal-content {
     height: 112vw;
   }
@@ -342,4 +351,4 @@
   .btns--wrapper__inner button {
     padding: 4px 8px;
   }
-}
+} */
